--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,6 +1,5 @@
 -name: ping the server
-  hosts: frontend
-  tasks: 
-  -name: ping the server
+  host: frontend
+  tasks:
+  -name: ping thes server
     ansible.builtin.ping:
-
