--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,5 +1,5 @@
--name: ping the server
-  host: frontend
+- name: ping the server
+  hosts: frontend
   tasks:
-  -name: ping thes server
+  - name: ping thes server
     ansible.builtin.ping:
