--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -1,12 +1,12 @@
-- name: Install and start nginx
+- name: nginx install and run
   hosts: frontend
-  become: yes
-  tasks: 
-  - name: Isatll nginx
+  become: yes # sudo access
+  tasks:
+  - name: install nginx server
     ansible.builtin.package:
       name: nginx
       state: present
-      
+  
   - name: start nginx
     ansible.builtin.service:
       name: nginx
