--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -1,30 +1,30 @@
-- name: nginx install and run
-  hosts: frontend
-  become: yes # sudo access
-  tasks:
-  - name: install nginx server
-    ansible.builtin.package:
-      name: nginx
-      state: present
-  
-  - name: start nginx
-    ansible.builtin.service:
-      name: nginx
-      state: started
-      enabled: yes
-
-
-# - name: Install and run Nginx server
+# - name: nginx install and run
 #   hosts: frontend
-#   become: yes
-#   tasks: 
-#   - name: installing Nginx server
+#   become: yes # sudo access
+#   tasks:
+#   - name: install nginx server
 #     ansible.builtin.package:
 #       name: nginx
 #       state: present
-
+  
 #   - name: start nginx
 #     ansible.builtin.service:
 #       name: nginx
 #       state: started
 #       enabled: yes
+
+
+- name: Install and run Nginx server
+  hosts: frontend
+  become: yes
+  tasks: 
+  - name: installing Nginx server
+    ansible.builtin.package:
+      name: nginx
+      state: present
+
+  - name: start nginx
+    ansible.builtin.service:
+      name: nginx
+      state: started
+      enabled: yes
