--- a/05-play-vars.yaml
+++ b/05-play-vars.yaml
@@ -21,10 +21,10 @@
   hosts: local
   connection: local
   vars:
-  course: DevOps
+  Course: DevOps
   Duration: 11H
   Trainer: Praveen
   tasks:
   - name: print course information
     ansible.builtin.debug:
-      msg: "Hello {{ course_name }}, Course Duration is {{ Duratiom }}, Tariner is {{ Trainer }}"
+      msg: "Hello {{ Course }}, Course Duration is {{ Duration }}, Tariner is {{ Trainer }}"
