--- a/07-vars-files.yaml
+++ b/07-vars-files.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local
   vars_files:
-  - course.ymal
+  - course.yaml
   tasks:
   - name: print course information
     ansible.builtin.debug:
