--- a/inventory.ini
+++ b/inventory.ini
@@ -8,5 +8,11 @@
 172.31.22.113
 
 [local]
-localhost COURSE=DevOps DURATION=10H TRAINER=praveen
+localhost
+
+[local:vars]
+COURSE=DevOps
+DURATION=10H
+TRAINER=Praveen
+
 
