--- a/09-vars-inventory.yaml
+++ b/09-vars-inventory.yaml
@@ -1,15 +1,15 @@
-# - name: variables from inventory 
-#   hosts: local
-#   connection: local
-#   tasks:
-#   - name: printing course details 
-#     ansible.builtin.debug:
-#       msg: "Hello I am learning {{ COURSE }}, Duration: {{ DURATION }}, Trainer is: {{ TRAINER }}"
-
-- name: variables from inventory
+- name: variables from inventory 
   hosts: local
   connection: local
   tasks:
-  - name: print course info
+  - name: printing course details 
     ansible.builtin.debug:
       msg: "Hello I am learning {{ COURSE }}, Duration: {{ DURATION }}, Trainer is: {{ TRAINER }}"
+
+# - name: variables from inventory
+#   hosts: local
+#   connection: local
+#   tasks:
+#   - name: print course info
+#     ansible.builtin.debug:
+#       msg: "Hello I am learning {{ COURSE }}, Duration: {{ DURATION }}, Trainer is: {{ TRAINER }}"
