--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [frontend]
-172.31.19.28
+172.31.19.28 COURSE=Ansible DURATION=10HR TRAINER=Sivakumar ansible_user=ec2-user ansible_password=DevOps321
 
 [backend]
 172.31.22.113
@@ -10,9 +10,11 @@
 [local]
 localhost
 
-[local:vars]
-COURSE=DevOps
-DURATION=10H
-TRAINER=Praveen
 
+
+[local:vars]
+COURSE=variables
+TRAINER=Sivakumar
+DURATION=1.5HR
+GREETING="Hello from Inventory"
 
