--- a/13-data-types.yaml
+++ b/13-data-types.yaml
@@ -12,7 +12,7 @@
     CONCETPS:
       ci: Jenkins
       scripting: "shell, ansible, python"
-  Tasks:
+  tasks:
    ansible.builtin.debug:
     msg:  "Course is: {{ COURSE }}, Duration: {{ DURATION }}, is live?: {{ IS_LIVE }}, Tools are: {{ TOOLS }}, Concepts are: {{ CONCETPS }}"
   
