--- a/13-data-types.yaml
+++ b/13-data-types.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local
   vars:
-    DURATION: 10H
+    DURATION: 10
     COURSE: "DevSecOps with AWS"
     IS_LIVE: true
     TOOLS:
@@ -13,6 +13,7 @@
       ci: Jenkins
       scripting: "shell, ansible, python"
   tasks:
+  - name: Printing course details
    ansible.builtin.debug:
     msg:  "Course is: {{ COURSE }}, Duration: {{ DURATION }}, is live?: {{ IS_LIVE }}, Tools are: {{ TOOLS }}, Concepts are: {{ CONCETPS }}"
   
