--- a/13-data-types.yaml
+++ b/13-data-types.yaml
@@ -1,20 +1,18 @@
-- name: Ansible datatypes
+- name: ansible datatypes
   hosts: local
   connection: local
   vars:
-    DURATION: 10
-    COURSE: "DevSecOps with AWS"
-    IS_LIVE: true
-    TOOLS:
+    DURATION: 120 # This is number
+    COURSE: "DevSecOps with AWS" # String
+    IS_LIVE: true # boolean
+    TOOLS: # List []
+    - Linux
     - shell
-    - linux
-    - ansible
-    CONCETPS:
-      ci: Jenkins
-      scripting: "shell, ansible, python"
+    - Ansible
+    CONCETPS: # map or dictionary or object. referred like {}
+      CI: Jenkins
+      SCRIPTING: "Shell, Ansible, Terraform, Python"
   tasks:
-  - name: Printing course details
+  - name: print course information
     ansible.builtin.debug:
-      msg:  "Course is: {{ COURSE }}, Duration: {{ DURATION }}, is live?: {{ IS_LIVE }}, Tools are: {{ TOOLS }}, Concepts are: {{ CONCETPS }}"
-  
-
+      msg: "Course is: {{ COURSE }}, Duration: {{ DURATION }}, is live?: {{ IS_LIVE }}, Tools are: {{ TOOLS }}, Concepts are: {{ CONCETPS }}"
