--- a/16-conditions.yaml
+++ b/16-conditions.yaml
@@ -1,5 +1,5 @@
 - name: playbook control using ansible facts
- hosts: forntend
+ hosts: frontend
  become: yes
  tasks:
  - name: instll nginx if it is RedHat
@@ -13,3 +13,23 @@
       name: nginx
       state: present
     when: ansible_os_family == "Debian"
+
+
+
+
+
+# - name: playbook control using ansible facts
+#   hosts: frontend
+#   become: yes
+#   tasks:
+#   - name: install nginx if redhat
+#     ansible.builtin.dnf:
+#       name: nginx
+#       state: present
+#     when: ansible_os_family == "RedHat"
+
+#   - name: install nginx if debian
+#     ansible.builtin.apt:
+#       name: nginx
+#       state: present
+#     when: ansible_os_family == "Debian"
