--- a/19-loops.yaml
+++ b/19-loops.yaml
@@ -7,7 +7,7 @@
       name: "{{ item.name }}"
       state: "{{ item.name }}"
     loop:
+      - { name: 'nginx', state: 'absent'}
       - { name: 'nginx', state: 'present'}
-      - { name: 'nginx', state: 'present'}
-      - { name: 'nginx', state: 'present'}
+      - { name: 'nginx', state: 'absent'}
   
