--- a/19-loops.yaml
+++ b/19-loops.yaml
@@ -5,9 +5,9 @@
   - name: install packages
     ansible.builtin.package:
       name: "{{ item.name }}"
-      state: "{{ item.name }}"
+      state: "{{ item.state }}"
     loop:
       - { name: 'nginx', state: 'absent'}
-      - { name: 'nginx', state: 'present'}
-      - { name: 'nginx', state: 'absent'}
+      - { name: 'mysql', state: 'present'}
+      - { name: 'python', state: 'absent'}
   
