--- a/20-functions.yaml
+++ b/20-functions.yaml
@@ -1,9 +1,7 @@
 - name: functions
   hosts: local
   connection: local
-  # vars:
-  #   persons: "Ramesh,suresh,kiran,venky"
   tasks:
   - name: check undefined variables
     ansible.builtin.debug:
-      msg: "Hello, {{ person | default('Ramesh') }}"
+      msg: " {{ person | default('Ramesh') }}"
