--- a/20-functions.yaml
+++ b/20-functions.yaml
@@ -1,6 +1,8 @@
 - name: functions
   hosts: local
   connection: local
+  vars:
+    persons: "Ramesh,Suresh,Kiran,Seshu"
   tasks:
   - name: check undefined variables
     ansible.builtin.debug:
