--- a/20-functions.yaml
+++ b/20-functions.yaml
@@ -6,4 +6,8 @@
   tasks:
   - name: check undefined variables
     ansible.builtin.debug:
-      msg: " {{ person | default('Ramesh') }}"
+      msg: " Hello, {{ person | default('Ramesh') }}"
+  
+  - name: print names
+    ansible.builtin.debug:
+      msg: " Hello, {{ persons | splits(',') }}"
