--- a/20-functions.yaml
+++ b/20-functions.yaml
@@ -10,4 +10,4 @@
   
   - name: print names
     ansible.builtin.debug:
-      msg: " Hello, {{ persons | splits(',') }}"
+      msg: " Hello, {{ persons | split(',') }}"
