--- a/20-functions.yaml
+++ b/20-functions.yaml
@@ -14,8 +14,9 @@
 
   - name: convert map into list
     vars:
-      course: DevOps
-      duration: 10HR
-      Trainer: Praveen
+      course:
+        name: DevOps
+        duration: 10HR
+        Trainer: Praveen
     ansible.builtin.debug:
       msg: " course info: {{ default | dict2items }}"
