--- a/20-functions.yaml
+++ b/20-functions.yaml
@@ -19,4 +19,6 @@
       duration: 10HR
       Trainer: Praveen
     ansible.builtin.debug:
-      msg: "course info: {{ default | dict2items }}"
+      msg: "course info: {{ course | dict2items }}"
+
+  
