--- a/20-functions.yaml
+++ b/20-functions.yaml
@@ -2,23 +2,48 @@
   hosts: local
   connection: local
   vars:
-    persons: "Ramesh,Suresh,Kiran,Seshu"
+    persons: "Ramesh,Suresh,Raheem,Joseph"
   tasks:
-  - name: check undefined variables
+  - name: check undefined variable
     ansible.builtin.debug:
-      msg: " Hello, {{ person | default('Ramesh') }}"
-  
+      msg: "Hello, {{ person | default('Ramesh') }}"
+
   - name: print names
     ansible.builtin.debug:
-      msg: " Hello, {{ persons | split(',') }}"
+      msg: "Hello {{ persons | split(',') }}"
 
   - name: convert map into list
     vars:
       course:
-        name: DevOps
+        name: ansible
         duration: 10HR
-        Trainer: Praveen
+        trainer: sivakumar
     ansible.builtin.debug:
-     msg: "course info: {{ course | dict2items }}"
+      msg: "Course Info: {{ course | dict2items  }}"
 
- 
+  - name: convert list into map
+    vars:
+      course:
+      - {'key': 'name', 'value': 'ansible'}
+      - {'key': 'duration', 'value': '10HR'}
+      - {'key': 'trainer', 'value': 'sivakumar'}
+    ansible.builtin.debug:
+      msg: "Course Info: {{ course | items2dict  }}"
+
+  - name: convert to uppercase
+    vars:
+      name: "Sivakumar Reddy M"
+    ansible.builtin.debug:
+      msg: "Hello {{ name | upper }}"
+
+  - name: convert to lowercase
+    vars:
+      name: "Sivakumar Reddy M"
+    ansible.builtin.debug:
+      msg: "Hello {{ name | lower }}"
+
+  - name: check IP address is valid or not
+    vars:
+      ip: "192.168.1.1"
+    ansible.builtin.debug:
+      msg: "{{ ip | ansible.utils.ipaddr }}"
